--- a/练习/浏览器/浏览器事件循环.md
+++ b/练习/浏览器/浏览器事件循环.md
@@ -1,16 +1,17 @@
 ## JS异步理解
 
-js是一门单线程的语言，以为他运行在浏览器的渲染主线程上，而渲染主线程只有一个
-而渲染主线程承担着巨大的任务，渲染页面，执行js，执行各种网络 I/O 计时器等都在渲染主线程上执行
+1. js是一门单线程的语言，因为他运行在浏览器的渲染主线程上，而渲染主线程只有一个
+2. 而渲染主线程承担着巨大的任务，渲染页面，执行js，执行各种网络 I/O 计时器等的回调函数都在渲染主线程上执行
 如果使用同步就极有可能造成渲染主线程的阻塞，从而导致消息队列中的很多其它任务无法执行。一方面导致繁忙的主线程白白消耗时间，另一方面给用户造成卡死的现象
-所以交给浏览器采用异步的方式避免，具体做法是，比如计时器，网络，I/O，事件监听等，主线程把这些任务交给其他线程去处理，自身立即结束任务的执行，转而去执行后续代码，当其他线程完成任务是，将回调函数包装成任务加入到消息队列的末尾等待主线程的执行
+3. 所以交给浏览器采用异步的方式避免，具体做法是，比如计时器，网络，I/O，事件监听等，主线程把这些任务交给其他线程去处理，自身立即结束任务的执行，转而去执行后续代码，当其他线程完成任务时，将回调函数包装成任务加入到消息队列的末尾等待主线程的执行
+
 在这种模式下主线程将不会阻塞，从而最大限度的保证了单线程的流畅运行
 
 ## JS事件循环理解
 
 事件循环又叫做消息循环（chrome源码中命名为message loop ，w3c标准是 event loop） 他是浏览器渲染主线程的工作方式
 
-在chrome源码中 他会开启一个死循环for循环，每次循环去消息队列中取一个任务进行执行，而其他线程只需要在合适的时候将任务加入到消息队列的末尾
+在chrome源码中 他会开启一个不会结束的for循环，每次循环去消息队列中取一个任务进行执行（没有任务的时候停止循环进入休眠状态），而其他线程只需要在合适的时候将任务加入到消息队列的末尾（唤醒渲染主线程去循环获取消息队列中的任务）
 
 过去是将消息队列简单的分为宏任务队列和微任务队列，这种说法已经不能满足现如今复杂的浏览器环境取而代之的是一种更加灵活的方式
 
