--- a/练习/浏览器/浏览器渲染.md
+++ b/练习/浏览器/浏览器渲染.md
@@ -12,3 +12,5 @@
 - 然后将位图信息交给合成线程，得到每个层以及每个块的位图信息生成指引quad信息
 - 指引信息会标示出每个位图应该画到哪里，以及会考虑到旋转和缩放等变形
 - 然后合成线程将quad信息交给GPU进程，GPU进程产生系统调用，提交给GPU硬件，最终完成屏幕成像
+
+![浏览器渲染](https://www.kecat.top/post/20231014235023.png)
